<resources>
    <string name="app_name">BSU Tools</string>
    <string name="schedule">Schedule</string>
    <string name="edu">Edu</string>
    <string name="weekday">Weekday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="calendar_image">Calendar image</string>
    <string name="image_group">Image group</string>
    <string name="type_image">Type image</string>
    <string name="image_audience_number">Image audience number</string>
    <string name="settings">Settings</string>
    <string name="location_image">Location image</string>
    <string name="course">Course</string>
    <string name="group">Group</string>
    <string name="save_changes">Save Changes</string>

    <string-array name="weekdays">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
    </string-array>

</resources>