<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_jungle_green">

    <TextView
        android:id="@+id/tvCourseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/course"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
        android:id="@+id/courseChoises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/tvCourseTitle"
        app:layout_constraintTop_toBottomOf="@id/tvCourseTitle"
        app:tbgCheckedButton="@+id/courseFirst">

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/courseFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/courseSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/courseThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/courseFourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            app:tbgMarkerColor="@color/dark_gunmetal" />


    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

    <TextView
        android:id="@+id/tvGroupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/group"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseChoises" />

    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
        android:id="@+id/groupChoises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintStart_toStartOf="@id/tvGroupTitle"
        app:layout_constraintTop_toBottomOf="@id/tvGroupTitle"
        app:tbgCheckedButton="@+id/courseFirst">

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupFourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupFifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupSixth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupSeventh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7"
            app:tbgMarkerColor="@color/dark_jungle_green" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupEighth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            app:tbgMarkerColor="@color/dark_gunmetal" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/groupEleven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11"
            app:tbgMarkerColor="@color/dark_gunmetal" />


    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveChanges"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/dark_gunmetal"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/save_changes"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


