<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="200dp">

    <com.furkanakdemir.surroundcardview.SurroundCardView
        android:id="@+id/sampleSurroundCardView"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:backgroundTint="@color/deep_aquamarine"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/platinum"
        app:scv_color="@color/dark_jungle_green"
        app:scv_duration="1500"
        app:scv_startPoint="bottom_start"
        app:scv_surrounded="false"
        app:scv_width="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/tvType"
            app:layout_constraintTop_toTopOf="@+id/tvType">

            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:maxLines="2"
                android:textColor="@color/platinum"
                android:textFontWeight="600"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Компьютерные сети" />

            <TextView
                android:id="@+id/tvTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textFontWeight="600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSubject"
                tools:text="Дерюшев А. А." />

            <ImageView
                android:id="@+id/ivTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/calendar_image"
                android:src="@drawable/ic_calendar"
                app:layout_constraintEnd_toStartOf="@id/ivType"
                app:layout_constraintHorizontal_chainStyle="spread"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTeacher" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/ubuntu"
                app:layout_constraintBottom_toBottomOf="@id/ivTime"
                app:layout_constraintStart_toEndOf="@id/ivTime"
                app:layout_constraintTop_toTopOf="@id/ivTime"
                tools:text="13:00–14:20" />

            <ImageView
                android:id="@+id/ivType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/type_image"
                android:src="@drawable/ic_study"
                app:layout_constraintBottom_toBottomOf="@id/ivTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/ivTime"
                app:layout_constraintTop_toTopOf="@id/ivTime" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/ubuntu"
                app:layout_constraintBottom_toBottomOf="@id/ivType"
                app:layout_constraintStart_toEndOf="@id/ivType"
                app:layout_constraintTop_toTopOf="@id/ivType"
                tools:text="п" />

            <ImageView
                android:id="@+id/ivGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/calendar_image"
                android:src="@drawable/ic_hierarchy"
                app:layout_constraintEnd_toEndOf="@+id/ivTime"
                app:layout_constraintStart_toStartOf="@id/ivTime"
                app:layout_constraintTop_toBottomOf="@id/ivTime" />

            <TextView
                android:id="@+id/tvGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/ubuntu"
                app:layout_constraintBottom_toBottomOf="@id/ivGroup"
                app:layout_constraintStart_toEndOf="@id/ivGroup"
                app:layout_constraintTop_toTopOf="@id/ivGroup"
                tools:text="а 1н" />

            <ImageView
                android:id="@+id/ivAudience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_audience_number"
                android:src="@drawable/ic_number"
                app:layout_constraintBottom_toBottomOf="@id/ivGroup"
                app:layout_constraintEnd_toEndOf="@id/ivType"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/ivType"
                app:layout_constraintTop_toTopOf="@id/ivGroup" />

            <TextView
                android:id="@+id/tvAudience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/ubuntu"
                app:layout_constraintBottom_toBottomOf="@id/ivAudience"
                app:layout_constraintStart_toEndOf="@id/ivAudience"
                app:layout_constraintTop_toTopOf="@id/ivAudience"
                tools:text="606" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.furkanakdemir.surroundcardview.SurroundCardView>
</androidx.constraintlayout.widget.ConstraintLayout>